--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Title</title>
+    <title>Final Project</title>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>My Webpage</h1>
+    <h1><center>Final Project</center></h1>
     <script src="./index.js"></script>
+    <div class="sidenav">
+      <div>
+
+      </div>
+    </div>
   </body>
 </html>
