--- a/src/index.html
+++ b/src/index.html
@@ -132,15 +132,16 @@
         </div>
         <p>
           <label for="pop-amount">Popularity Range:</label>
-          <input type="text" id="pop-amount" readonly>
+          <input type="text" class="slider-amount" id="pop-amount" readonly>
         </p>
         <div id="slider-range1"></div>
         <p>
           <label for="date-amount">Date Range:</label>
-          <input type="text" id="date-amount" readonly>
+          <input type="text" class="slider-amount" id="date-amount" readonly>
         </p>
         <div id="slider-range2"></div>
-        <input type="submit" id="submit"  value="Search" >
+        <br>
+        <input type="submit" id="submit"  value="Search">
       </form>
     </div>
     <script src="./index.js"></script>
