--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,7 @@
         <input type="submit" id="submit"  value="Search">
       </form>
     </div>
+    <div id = "NetworkGraph"></div>
     <script src="./index.js"></script>
   </body>
 </html>
