Fix submit filtering

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,7 @@
   <body>
     <div class="sidenav">
       <form id="form">
-        <button class="dropdown-btn">People
-          <i class="fa fa-caret-down"></i>
-        </button>
+        <button type="button" class="dropdown-btn">People</button>
         <div class="dropdown-container">
           <h4>Democrats</h4>
           <input type="checkbox" class="dem" id="dem1" name="dem1" value="Barack Obama">
@@ -108,16 +106,11 @@
           <label for="rep22">Mike Lee</label><br>
         </div>
 
-        <button class="dropdown-btn">Issues
-          <i class="fa fa-caret-down"></i>
-        </button>
+        <button type="button" class="dropdown-btn">Issues</button>
         <div class="dropdown-container">
-
         </div>
 
-        <button class="dropdown-btn">Sentiment
-          <i class="fa fa-caret-down"></i>
-        </button>
+        <button type="button" class="dropdown-btn">Sentiment</button>
         <div class="dropdown-container">
           <input type="checkbox" class="sentiment" id="strongpos" name="strongpos" value="Strongly Positive">
           <label for="strongpos">Strongly Positive</label><br>
