--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,8 @@
         <input type="submit" id="submit"  value="Search">
       </form>
     </div>
-    <div id = "NetworkGraph"></div>
+    <div id = "GraphNetwork"></div>
     <script src="./index.js"></script>
+    <script src="Network.js"></script>
   </body>
 </html>
