--- a/src/index.html
+++ b/src/index.html
@@ -144,8 +144,11 @@
         <input type="submit" id="submit"  value="Search">
       </form>
     </div>
+    <div class = "main">
     <div id = "GraphNetwork"></div>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="./index.js"></script>
     <script src="Network.js"></script>
+    </div>
   </body>
 </html>
