--- a/src/index.html
+++ b/src/index.html
@@ -163,8 +163,13 @@
         <input type="submit" id="submit"  value="Submit">
       </form><br><br>
     </div>
-    <div id = "GraphNetwork"></div>
-    <script src="./index.js"></script>
-    <script src="Network.js"></script>
+    
+    <div class = "main">
+      <div id = "GraphNetwork"></div>
+      <div id="dataviz"></div>
+      <script src="./index.js"></script>
+<!--      <script src="Network.js"></script>-->
+<!--      <script src="TwitterScatter.js"></script>-->
+    </div>
   </body>
 </html>
