Update people checkboxes

--- a/src/index.html
+++ b/src/index.html
@@ -26,98 +26,48 @@
           <h4>Democrats</h4>
           <input type="checkbox" id="dem-all" onClick="toggle(this, 'dem')">
           <label for="dem-all">Select All</label><br>
-          <input type="checkbox" class="dem" id="dem1" name="dem1" value="Barack Obama">
-          <label for="dem1">Barack Obama</label><br>
-          <input type="checkbox" class="dem" id="dem2" name="dem2" value="Bernie Sanders">
-          <label for="dem2">Bernie Sanders</label><br>
-          <input type="checkbox" class="dem" id="dem3" name="dem3" value="Pete Buttigieg">
-          <label for="dem3">Pete Buttigieg</label><br>
-          <input type="checkbox" class="dem" id="dem4" name="dem4" value="Elizabeth Warren">
-          <label for="dem4">Elizabeth Warren</label><br>
-          <input type="checkbox" class="dem" id="dem5" name="dem5" value="Amy Klobuchar">
-          <label for="dem5">Amy Klobuchar</label><br>
-          <input type="checkbox" class="dem" id="dem6" name="dem6" value="Joe Biden">
-          <label for="dem6">Joe Biden</label><br>
-          <input type="checkbox" class="dem" id="dem7" name="dem7" value="Andrew Yang">
-          <label for="dem7">Andrew Yang</label><br>
-          <input type="checkbox" class="dem" id="dem8" name="dem8" value="Michael Bloomberg">
-          <label for="dem8">Michael Bloomberg</label><br>
-          <input type="checkbox" class="dem" id="dem9" name="dem9" value="Tulsi Gabbard">
-          <label for="dem9">Tulsi Gabbard</label><br>
-          <input type="checkbox" class="dem" id="dem10" name="dem10" value="Tom Steyer">
-          <label for="dem10">Tom Steyer</label><br>
-          <input type="checkbox" class="dem" id="dem11" name="dem11" value="Michael Bennet">
-          <label for="dem11">Michael Bennet</label><br>
-          <input type="checkbox" class="dem" id="dem12" name="dem12" value="Beto O'Rourke">
-          <label for="dem12">Beto O'Rourke</label><br>
-          <input type="checkbox" class="dem" id="dem13" name="dem13" value="Kamala Harris">
-          <label for="dem13">Kamala Harris</label><br>
-          <input type="checkbox" class="dem" id="dem14" name="dem14" value="Alexandria Ocasio-Cortez">
-          <label for="dem14">Alexandria Ocasio-Cortez</label><br>
-          <input type="checkbox" class="dem" id="dem15" name="dem15" value="Rep. Ilhan Omar">
-          <label for="dem15">Rep. Ilhan Omar</label><br>
-          <input type="checkbox" class="dem" id="dem16" name="dem16" value="Nancy Pelosi">
-          <label for="dem16">Nancy Pelosi</label><br>
-          <input type="checkbox" class="dem" id="dem17" name="dem17" value="Adam Schiff">
-          <label for="dem17">Adam Schiff</label><br>
-          <input type="checkbox" class="dem" id="dem18" name="dem18" value="Chuck Schumer">
-          <label for="dem18">Chuck Schumer</label><br>
-          <input type="checkbox" class="dem" id="dem19" name="dem19" value="John Lewis">
-          <label for="dem19">John Lewis</label><br>
-          <input type="checkbox" class="dem" id="dem20" name="dem20" value="Maxine Waters">
-          <label for="dem20">Maxine Waters</label><br>
-          <input type="checkbox" class="dem" id="dem21" name="dem21" value="Rashida Tlaib">
-          <label for="dem21">Rashida Tlaib</label><br>
-          <input type="checkbox" class="dem" id="dem22" name="dem22" value="Hillary Clinton">
-          <label for="dem22">Hillary Clinton</label><br>
+          <input type="checkbox" class="dem" id="dem1" name="dem1" value="AOC">
+          <label for="dem1">Alexandria Ocasio-Cortez</label><br>
+          <input type="checkbox" class="dem" id="dem2" name="dem2" value="BarackObama">
+          <label for="dem2">Barack Obama</label><br>
+          <input type="checkbox" class="dem" id="dem3" name="dem3" value="BernieSanders">
+          <label for="dem3">Bernie Sanders</label><br>
+          <input type="checkbox" class="dem" id="dem4" name="dem4" value="BetoORourke">
+          <label for="dem4">Beto O'Rourke</label><br>
+          <input type="checkbox" class="dem" id="dem5" name="dem5" value="SenSchumer">
+          <label for="dem5">Chuck Schumer</label><br>
+          <input type="checkbox" class="dem" id="dem6" name="dem6" value="ewarren">
+          <label for="dem6">Elizabeth Warren</label><br>
+          <input type="checkbox" class="dem" id="dem7" name="dem7" value="HillaryClinton">
+          <label for="dem7">Hillary Clinton</label><br>
+          <input type="checkbox" class="dem" id="dem8" name="dem8" value="JoeBiden">
+          <label for="dem8">Joe Biden</label><br>
+          <input type="checkbox" class="dem" id="dem9" name="dem9" value="KamalaHarris">
+          <label for="dem9">Kamala Harris</label><br>
+          <input type="checkbox" class="dem" id="dem10" name="dem10" value="RepMaxineWaters">
+          <label for="dem10">Maxine Waters</label><br>
 
           <h4>Republicans</h4>
           <input type="checkbox" id="rep-all" onClick="toggle(this, 'rep')">
           <label for="rep-all">Select All</label><br>
-          <input type="checkbox" class="rep" id="rep1" name="rep1" value="Donald Trump">
+          <input type="checkbox" class="rep" id="rep1" name="rep1" value="realDonaldTrump">
           <label for="rep1">Donald Trump</label><br>
-          <input type="checkbox" class="rep" id="rep2" name="rep2" value="Mitch McConnell">
-          <label for="rep2">Mitch McConnell</label><br>
-          <input type="checkbox" class="rep" id="rep3" name="rep3" value="Devin Nunes">
-          <label for="rep3">Devin Nunes</label><br>
-          <input type="checkbox" class="rep" id="rep4" name="rep4" value="Marco Rubio">
-          <label for="rep4">Marco Rubio</label><br>
-          <input type="checkbox" class="rep" id="rep5" name="rep5" value="Ted Cruz">
-          <label for="rep5">Ted Cruz</label><br>
-          <input type="checkbox" class="rep" id="rep6" name="rep6" value="Mitt Romney">
-          <label for="rep6">Mitt Romney</label><br>
-          <input type="checkbox" class="rep" id="rep7" name="rep7" value="Lindsey Graham">
-          <label for="rep7">Lindsey Graham</label><br>
-          <input type="checkbox" class="rep" id="rep8" name="rep8" value="Jim Jordan">
-          <label for="rep8">Jim Jordan</label><br>
-          <input type="checkbox" class="rep" id="rep9" name="rep9" value="Mike Pence">
-          <label for="rep9">Mike Pence</label><br>
-          <input type="checkbox" class="rep" id="rep10" name="rep10" value="Secretary Mike Pompeo">
-          <label for="rep10">Secretary Mike Pompeo</label><br>
-          <input type="checkbox" class="rep" id="rep11" name="rep11" value="Paul Ryan">
-          <label for="rep11">Paul Ryan</label><br>
-          <input type="checkbox" class="rep" id="rep12" name="rep12" value="Stephanie Grisham">
-          <label for="rep12">Stephanie Grisham</label><br>
-          <input type="checkbox" class="rep" id="rep13" name="rep13" value="Mark Meadows">
-          <label for="rep13">Mark Meadows</label><br>
-          <input type="checkbox" class="rep" id="rep14" name="rep14" value="Matt Gaetz">
-          <label for="rep14">Matt Gaetz</label><br>
-          <input type="checkbox" class="rep" id="rep15" name="rep15" value="Kevin McCarthy">
-          <label for="rep15">Kevin McCarthy</label><br>
-          <input type="checkbox" class="rep" id="rep16" name="rep16" value="Rand Paul">
-          <label for="rep16">Rand Paul</label><br>
-          <input type="checkbox" class="rep" id="rep17" name="rep17" value="Lisa Murkowski">
-          <label for="rep17">Lisa Murkowski</label><br>
-          <input type="checkbox" class="rep" id="rep18" name="rep18" value="Elise Stefanik">
-          <label for="rep18">Elise Stefanik</label><br>
-          <input type="checkbox" class="rep" id="rep19" name="rep19" value="Doug Collins">
-          <label for="rep19">Doug Collins</label><br>
-          <input type="checkbox" class="rep" id="rep20" name="rep20" value="John Ratcliffe">
-          <label for="rep20">John Ratcliffe</label><br>
-          <input type="checkbox" class="rep" id="rep21" name="rep21" value="Steve Scalise">
-          <label for="rep21">Steve Scalise</label><br>
-          <input type="checkbox" class="rep" id="rep22" name="rep22" value="Mike Lee">
-          <label for="rep22">Mike Lee</label><br>
+          <input type="checkbox" class="rep" id="rep2" name="rep2" value="Jim_Jordan">
+          <label for="rep2">Jim Jordan</label><br>
+          <input type="checkbox" class="rep" id="rep3" name="rep3" value="LindseyGrahamSC">
+          <label for="rep3">Lindsey Graham</label><br>
+          <input type="checkbox" class="rep" id="rep4" name="rep4" value="lisamurkowski">
+          <label for="rep4">Lisa Murkowski</label><br>
+          <input type="checkbox" class="rep" id="rep5" name="rep5" value="marcorubio">
+          <label for="rep5">Marco Rubio</label><br>
+          <input type="checkbox" class="rep" id="rep6" name="rep6" value="SpeakerRyan">
+          <label for="rep6">Paul Ryan</label><br>
+          <input type="checkbox" class="rep" id="rep7" name="rep7" value="RandPaul">
+          <label for="rep7">Rand Paul</label><br>
+          <input type="checkbox" class="rep" id="rep8" name="rep8" value="SteveScalise">
+          <label for="rep8">Steve Scalise</label><br>
+          <input type="checkbox" class="rep" id="rep9" name="rep9" value="tedcruz">
+          <label for="rep9">Ted Cruz</label><br>
         </div>
 
         <!-- Issue selection -->
