--- a/src/index.html
+++ b/src/index.html
@@ -109,9 +109,11 @@
           <input type="text" class="slider-amount1" id="pop-amount-end" readonly>
         </p>
         <div id="slider-range1"></div>
+        <br>
 
         <!-- Date slider -->
         <p>
+          Please select an election period before using the Date slider.<br>
           <label>Date Range:</label>
           <input type="text" class="slider-amount2" id="date-amount-start" readonly>
           to
@@ -119,6 +121,7 @@
         </p>
         <div id="slider-range2"></div>
         <br>
+
         <input type="submit" id="submit"  value="Submit">
       </form><br><br>
     </div>
