--- a/src/index.html
+++ b/src/index.html
@@ -130,8 +130,9 @@
       <div id = "GraphNetwork"></div>
       <div id="dataviz"></div>
       <script src="./index.js"></script>
-<      <script src="Network.js"></script>
-<     <script src="TwitterScatter.js"></script>
+      <script src="sliders.js"></script>
+      <script src="Network.js"></script>
+      <script src="TwitterScatter.js"></script>
     </div>
   </body>
 </html>
