--- a/src/index.html
+++ b/src/index.html
@@ -95,10 +95,12 @@
         <!-- Election period selection -->
         <button type="button" class="dropdown-btn">Election Period</button>
         <div class="dropdown-container">
-          <input type="radio" class="election-period" id="2016" name="election-period" value="2016">
-          <label for="2016">2016 Election</label><br>
-          <input type="radio" class="election-period" id="2020" name="election-period" value="2020">
-          <label for="2020">2020 Election</label><br>
+          <div id="election-radios">
+              <input type="radio" class="election-period1" id="2016" name="election-period" value="2016" checked>
+              <label for="2016">2016 Election</label><br>
+              <input type="radio" class="election-period" id="2020" name="election-period" value="2020">
+              <label for="2020">2020 Election</label><br>
+          </div>
         </div>
 
         <!-- Popularity slider -->
