Update sentiment values

--- a/src/index.html
+++ b/src/index.html
@@ -80,15 +80,15 @@
         <div class="dropdown-container">
           <input type="checkbox" id="sentiment-all" onClick="toggle(this, 'sentiment')">
           <label for="sentiment-all">Select All</label><br>
-          <input type="checkbox" class="sentiment" id="strongpos" name="strongpos" value="Strongly Positive">
+          <input type="checkbox" class="sentiment" id="strongpos" name="strongpos" value="very pos">
           <label for="strongpos">Strongly Positive</label><br>
-          <input type="checkbox" class="sentiment" id="slightpos" name="slightpos" value="Slightly Positive">
+          <input type="checkbox" class="sentiment" id="slightpos" name="slightpos" value="pos">
           <label for="slightpos">Slightly Positive</label><br>
-          <input type="checkbox" class="sentiment" id="neu" name="neu" value="Neutral">
+          <input type="checkbox" class="sentiment" id="neu" name="neu" value="neu">
           <label for="neu">Neutral</label><br>
-          <input type="checkbox" class="sentiment" id="slightneg" name="slightneg" value="Slightly Negative">
+          <input type="checkbox" class="sentiment" id="slightneg" name="slightneg" value="neg">
           <label for="slightneg">Slightly Negative</label><br>
-          <input type="checkbox" class="sentiment" id="strongneg" name="strongneg" value="Strongly Negative">
+          <input type="checkbox" class="sentiment" id="strongneg" name="strongneg" value="very neg">
           <label for="strongneg">Strongly Negative</label><br>
         </div>
 
