Add resizable sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
   <body>
-    <div class="sidenav">
+    <div class="sidenav" id="sidenav">
       <form id="form">
+        <h2>&nbsp;&nbsp;Filtering</h2>
+
         <!-- Democrat/Republican selection -->
         <button type="button" class="dropdown-btn">People</button>
         <div class="dropdown-container">
@@ -134,7 +136,8 @@
         </div>
         <br><br>
 
-        <input type="submit" id="submit"  value="Submit">
+        &nbsp;&nbsp;
+        <input type="submit" id="submit" value="Submit">
       </form><br><br>
     </div>
     
