Add label to popularity display

--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,7 @@
             <input type="text" class="slider-amount1" id="pop-amount-start" readonly>
             to
             <input type="text" class="slider-amount1" id="pop-amount-end" readonly>
+            <label id="dimension-type"></label>
           </p>
           <div id="slider-range1"></div>
           <br><br>
