Updates the tweets file to include ids for the twitter widgets

--- a/src/index.html
+++ b/src/index.html
@@ -149,5 +149,6 @@
       <script src="Network.js"></script>
       <script src="TwitterScatter.js"></script>
     </div>
+    <div id="twittercontainer"></div>
   </body>
 </html>
