Adds summary stats visualizations.

--- a/src/index.html
+++ b/src/index.html
@@ -150,5 +150,8 @@
       <script src="TwitterScatter.js"></script>
     </div>
     <div id="twittercontainer"></div>
+    <div id="pieChart"></div>
+    <div id="sentimentChart"></div>
+    <div id="interactionChart"></div>
   </body>
 </html>
