Move y dimension selection

--- a/src/index.html
+++ b/src/index.html
@@ -109,20 +109,6 @@
           </p>
           <div id="slider-range2"></div>
         </div>
-
-        <br><br>
-
-        <button type="button" class="dropdown-btn">Scatter Plot Filters</button>
-        <div class="dropdown-container">
-          <div id="y-axis-radios">
-            <input type="radio" class="y-axis" id="fav" name="y-axis" value="favorites" required>
-            <label for="fav"># of Favorites</label><br>
-            <input type="radio" class="y-axis" id="rt" name="y-axis" value="retweets">
-            <label for="2020"># of Retweets</label><br>
-            <input type="radio" class="y-axis" id="replies" name="y-axis" value="replies">
-            <label for="2020"># of Replies</label><br>
-          </div>
-        </div>
         <br><br>
 
         &nbsp;&nbsp;
@@ -140,6 +126,13 @@
 
       <!-- Scatterplot search -->
       <form id="scatter-form">
+        &nbsp;&nbsp;Please select a Y-dimension:
+        <input type="radio" class="y-axis" id="fav" name="y-axis" value="favorites" required>
+        <label for="fav"># of Favorites</label>
+        <input type="radio" class="y-axis" id="rt" name="y-axis" value="retweets">
+        <label for="2020"># of Retweets</label>
+        <input type="radio" class="y-axis" id="replies" name="y-axis" value="replies">
+        <label for="2020"># of Replies</label><br>
         <input type="text" id="scatter-input" placeholder="Enter a keyword...">
         <input type="submit" id="scatter-submit" value="Search" >
       </form>
