Add filtering message

--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,9 @@
         <br><br>
 
         &nbsp;&nbsp;
-        <input type="submit" id="submit" value="Submit">
+        <input type="submit" id="submit" value="Submit"><br><br>
       </form><br><br>
+      <span id="result"></span>
     </div>
     
     <div class = "main">
