--- a/src/index.html
+++ b/src/index.html
@@ -131,28 +131,40 @@
     </div>
     
     <div class = "main">
-      <!-- Network search -->
-      <form id="network-form">
-        <input type="text" id="network-input" placeholder="Enter a keyword...">
-        <input type="submit" id="network-submit" value="Search" >
-      </form>
-      <div id="dataviz"></div>
-      <script src="./index.js"></script>
-      <script src="sliders.js"></script>
-      <canvas width="960" height="600"></canvas>
+        <div id="container">
+            <ul role="tablist">
+                <li><a role="tab" href="#panel1" aria-selected="true">Panel 1</a></li>
+                <li><a role="tab" href="#panel2">Panel 2</a></li>
+            </ul>
+            <section role="tabpanel" id="panel1">
+                <!-- Network search -->
+                <form id="network-form">
+                    <input type="text" id="network-input" placeholder="Enter a keyword...">
+                    <input type="submit" id="network-submit" value="Search" >
+                </form>
+                <script src="sliders.js"></script>
+                <canvas width="900" height="600"></canvas>
+                <script src="Network.js"></script>
+            </section>
+            <section role="tabpanel" id="panel2">
+                <!-- Scatterplot search -->
+                <div id="dataviz"></div>
+                <form id="scatter-form">
+                    <input type="text" id="scatter-input" placeholder="Enter a keyword...">
+                    <input type="submit" id="scatter-submit" value="Search" >
+                </form>
+                <div class="scatter-container"></div>
+                <script src="TwitterScatter.js"></script>
+            </section>
+        </div>
 
-      <!-- Scatterplot search -->
-      <form id="scatter-form">
-        <input type="text" id="scatter-input" placeholder="Enter a keyword...">
-        <input type="submit" id="scatter-submit" value="Search" >
-      </form>
-      <div class="scatter-container"></div>
-      <script src="Network.js"></script>
-      <script src="TwitterScatter.js"></script>
     </div>
     <div id="twittercontainer"></div>
     <div id="pieChart"></div>
     <div id="sentimentChart"></div>
     <div id="interactionChart"></div>
+    <script src="./index.js"></script>
+    <script src="aria-tabs.js"></script>
   </body>
+
 </html>
