Fixes index.html sentiment values. Also changes in layout

--- a/src/index.html
+++ b/src/index.html
@@ -79,11 +79,11 @@
           <label for="sentiment-all">Select All</label><br>
           <input type="checkbox" class="sentiment" id="strongpos" name="strongpos" value="very pos">
           <label for="strongpos">Strongly Positive</label><br>
-          <input type="checkbox" class="sentiment" id="slightpos" name="slightpos" value="pos">
+          <input type="checkbox" class="sentiment" id="slightpos" name="slightpos" value="slight pos">
           <label for="slightpos">Slightly Positive</label><br>
           <input type="checkbox" class="sentiment" id="neu" name="neu" value="neu">
           <label for="neu">Neutral</label><br>
-          <input type="checkbox" class="sentiment" id="slightneg" name="slightneg" value="neg">
+          <input type="checkbox" class="sentiment" id="slightneg" name="slightneg" value="slight neg">
           <label for="slightneg">Slightly Negative</label><br>
           <input type="checkbox" class="sentiment" id="strongneg" name="strongneg" value="very neg">
           <label for="strongneg">Strongly Negative</label><br>
