Minor layout changes

--- a/src/index.html
+++ b/src/index.html
@@ -107,13 +107,13 @@
             to
             <input type="text" class="slider-amount2" id="date-amount-end" readonly>
           </p>
-          <div id="slider-range2"></div>
+          &nbsp;&nbsp;<div id="slider-range2"></div>
         </div>
         <br><br>
 
         &nbsp;&nbsp;
         <input type="submit" id="submit" value="Submit"><br><br>
-      </form><br><br>
+      </form><br>
       <span id="result"></span>
     </div>
     
