--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
         &nbsp;&nbsp;
         <input type="submit" id="submit" value="Submit"><br><br>
       </form><br>
-      <span id="result"></span>
+      <span id="result"></span><br><br><br>
     </div>
     
     <div class = "main">
