Changes in layout

--- a/src/index.html
+++ b/src/index.html
@@ -151,10 +151,13 @@
             </section>
         </div>
     </div>
-    <div id="twittercontainer"></div>
-    <div id="pieChart"></div>
-    <div id="sentimentChart"></div>
-    <div id="interactionChart"></div>
+    <div id="summarycontainer">
+      <div id="twittercontainer"></div>
+      <div id="pieChart"></div>
+      <div id="sentimentChart"></div>
+      <div id="interactionChart"></div>
+    </div>
+
     <script src="./index.js"></script>
     <script src="aria-tabs.js"></script>
   </body>
