fixes div selection for scatter plot

--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
                   <input type="text" id="scatter-input" placeholder="Enter a keyword...">
                   <input type="submit" id="scatter-submit" value="Search" >
                 </form>
-                <div id="scatter-container"></div>
+                <div class="scatter-container"></div>
                 <script src="TwitterScatter.js"></script>
             </section>
         </div>
