Adds overall button to show the overall distributions

--- a/src/index.html
+++ b/src/index.html
@@ -154,6 +154,9 @@
     <div id="summarycontainer">
       <div id="twittercontainer"></div>
       <div id="pieChart"></div>
+      <div id="option">
+        <input type="button" id="clear" value="Overall"/>
+      </div>
       <div id="sentimentChart"></div>
       <div id="interactionChart"></div>
     </div>
