Ensure filtering selection

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="sidenav" id="sidenav">
       <form id="main-form">
-        <h2>&nbsp;&nbsp;Filtering</h2>
+        <h2>&nbsp;&nbsp;Tweet Filtering</h2>
 
         <!-- Democrat/Republican selection -->
         <button type="button" class="dropdown-btn">People</button>
