--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,7 @@
                   <input type="submit" id="scatter-submit" value="Search" >
                 </form>
                 <div class="scatter-container"></div>
+                <div id='tooltip'></div>
                 <script src="TwitterScatter.js"></script>
             </section>
         </div>
