--- a/src/index.html
+++ b/src/index.html
@@ -120,10 +120,11 @@
     <div class = "main">
         <div id="container">
             <ul role="tablist">
-                <li><a role="tab" href="#panel1" aria-selected="true">Panel 1</a></li>
-                <li><a role="tab" href="#panel2">Panel 2</a></li>
+                <li><a role="tab" href="#page1" aria-selected="true">Word Network</a></li>
+                <li><a role="tab" href="#page2">Twitter Scatter</a></li>
+                <li><a role="tab" href="#page3">How to use (Instructions)</a></li>
             </ul>
-            <section role="tabpanel" id="panel1">
+            <section role="tabpanel" id="page1">
                 <!-- Network search -->
                 <form id="network-form">
                     <input type="text" id="network-input" placeholder="Enter a keyword...">
@@ -133,7 +134,7 @@
                 <canvas width="900" height="600"></canvas>
                 <script src="Network.js"></script>
             </section>
-            <section role="tabpanel" id="panel2">
+            <section role="tabpanel" id="page2">
                 <!-- Scatterplot search -->
                 <form id="scatter-form">
                   &nbsp;&nbsp;Please select a Y-dimension:
@@ -148,6 +149,22 @@
                 </form>
                 <div class="scatter-container"></div>
                 <script src="TwitterScatter.js"></script>
+            </section>
+            <section role="tabpanel" id="page3">
+                <p>*Where My Country Gone?* is an interactive dashboard intended to help any user
+                    learn more about the role of twietter in the American politcs scene with data visualization.
+                </p>
+                <h3>How to use the dashboard:</h3>
+                <ol>
+                    <li>s</li>
+                    <li>s</li>
+                    <li>s</li>
+                    <li>s</li>
+                    <li>s</li>
+
+                </ol>
+
+
             </section>
         </div>
     </div>
