--- a/src/index.html
+++ b/src/index.html
@@ -154,17 +154,40 @@
                 <p>*Where My Country Gone?* is an interactive dashboard intended to help any user
                     learn more about the role of twietter in the American politcs scene with data visualization.
                 </p>
-                <h3>How to use the dashboard:</h3>
+                <h4>With Network graph you can visualize most common words that are concurrently used with word of choice.
+                    It can be intereacted with via drag.
+                </h4>
+                <h4>The Twitter Scatter plots scatter of each tweet in filtered data as a node (axis of choice used)</h4>
+                <h4>The Tweet Filtering allows filtering of tweets to get specific subset of data of interest.</h4>
+                
+                <h2>How to use the dashboard:</h2>
                 <ol>
-                    <li>s</li>
-                    <li>s</li>
-                    <li>s</li>
-                    <li>s</li>
-                    <li>s</li>
-
+                    <li>Select set of political individuals to analyze their tweets</li>
+                    <li>Specify tweets of sentiment level that you wish to analyze. 
+                      Each tweet has been categorized to 5 sentiment levels ranging from negative to
+                      positive based on Microsoft's NLTK package. 
+                    </li>
+                    <li>Select Date. Since the dashboard handles twitter data of
+                      American polticians, it handles two significant evenets: 2016 and
+                      2020 elections. The user can select an election period and further Specify
+                      the date.
+                    </li>
+                    <li>Once the filters are set, press submit! A green text block below will
+                      verify that a search was successful.
+                    </li>
+                    <li>
+                      The word network requires a word to be searched
+                    </li>
+                    <li>
+                      Select the "Twitter Scatter" tab to visualize tweets as a scatterplot,
+                      its tooltip allows you to highlight specific tweets from the plot.
+                    </li>
+                    <li>
+                      The summary stats provide more information about the data that has been
+                      filtered. 
+                    </li>
                 </ol>
-
-
+                <p>Thank you for using Where My Country Gone?, and have fun!</p>
             </section>
         </div>
     </div>
