Add dropdown arrow

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <h2>&nbsp;&nbsp;Tweet Filtering</h2>
 
         <!-- Democrat/Republican selection -->
-        <button type="button" class="dropdown-btn">People</button>
+        <button type="button" class="dropdown-btn"><i class="arrow-right"></i>&nbsp;&nbsp;People</button>
         <div class="dropdown-container" id="dropdown-container-1">
           <script>
             function toggle(source, className) {
@@ -73,7 +73,7 @@
         </div>
 
         <!-- Sentiment selection -->
-        <button type="button" class="dropdown-btn">Sentiment</button>
+        <button type="button" class="dropdown-btn"><i class="arrow-right"></i>&nbsp;&nbsp;Sentiment</button>
         <div class="dropdown-container" id="dropdown-container-2">
           <input type="checkbox" id="sentiment-all" onClick="toggle(this, 'sentiment')">
           <label for="sentiment-all">Select All</label><br>
@@ -90,7 +90,7 @@
         </div>
 
         <!-- Election period selection -->
-        <button type="button" class="dropdown-btn">Election Period</button>
+        <button type="button" class="dropdown-btn"><i class="arrow-right"></i>&nbsp;&nbsp;Election Period</button>
         <div class="dropdown-container" id="dropdown-container-3">
           <div id="election-radios">
               <input type="radio" class="election-period" id="2016" name="election-period" value="2016">
