Starts adding information in pertinent places.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,17 @@
   <body>
     <div class="sidenav" id="sidenav">
       <h1>Where My Country Gone?</h1><br>
+        <button class="collapsible">How to use?</button>
+        <div id="tooltiphowto" style="display:none;">bla bla</div>
+        <div id="yourLink">Click here to show the tooltip!</div>
+        <div class="howto">
+            <ol>
+                <li>Select politicians to focus on.</li>
+                <li>Select the sentiments that you prefer to include.</li>
+                <li>Select an election period and a range of dates.</li>
+                <li></li>
+            </ol>
+        </div>
       <form id="main-form">
         <h3>&nbsp;&nbsp;Tweet Filtering</h3>
 
