--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                   <input type="text" id="scatter-input" placeholder="Enter a keyword...">
                   <input type="submit" id="scatter-submit" value="Search" >
                 </form>
-                <div class="scatter-container"></div>
+                <div id="scatter-container"></div>
                 <div id='tooltip'></div>
                 <script src="TwitterScatter.js"></script>
             </section>
