fixed html for network color scale

--- a/src/index.html
+++ b/src/index.html
@@ -133,6 +133,7 @@
                 </form>
                 <script src="sliders.js"></script>
                 <canvas width="900" height="600"></canvas>
+                <div id="legend" style="display: inline-block"></div>
                 <script src="Network.js"></script>
             </section>
             <section role="tabpanel" id="page2">
